CHANGES
=======

master
------
* Tasks now accessible via attributes on `service.tasks` by name and via `get()` and `require()`
* Fixed a race condition in deferred errback handling in QueueTask

0.5.1
-----
* Renamed FB303ProcessorTask to FB303HandlerTask
* NBServerTask can now specify a MODULE to dictate which thrift handler task should be used
  in the event that more than one has been registered.
* Changed thrift handler semantics: you must set a MODULE instead of PROCESSOR on things now


0.5.0
-----
* Moved counters from sparts.sparts to sparts.counters
* Fix some bugs in DirectoryWatcherTask, counters
* Add an initService() hook to VService
* Added a hook to do per-thread Task-specific initialization, initTaskThread()
* `sparts.thrift.client` with ThriftClient helper to reduce synchronous thrift client boilerplate
* Basic python3 support, python2.6 support via `six` dependency.
* `sparts.ctx` module with common helpful context managers
* `sparts.thrift.compiler` with helpers to generate thrift on-the-fly
* Various unittest, documentation improvements
* Handle string args to sparts.tasks.twisted_command.CommandTask better

0.4.1
-----
* Fixed a major bug that prevents mixing tasks that have both samples and standard counters
* Fixed logspew in (thrift) NBServerTask shutdown
* Improved unittest usability and performance significantly

0.4.0
-----
* New tasks.twisted_command.CommandTask for executing and tailing commands in subprocesses
* Shutdown on unhandled exceptions in tasks, initialization
* Support for `required`, `choices` in option()s
* PeriodicTask (and subclasses) now handle thrown TryLater correctly
* Make TornadoTask (subclasses) implicitly DEP TornadoIOLoopTask
* initFromCLI() takes an optional `name` kwarg for using VService directly
* Support shutdown from other tasks
* bugfix in 'store_true' options always returning True even when False
* bugfix in TwistedReactorTask for failed worker processes: may interfere with signal handlers

0.3.1
-----